--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json, *.tbw, *.txt"
 exclude_filter="exporter.sh"
-export_path="../../../play2worldPC.exe"
+export_path="../destop_export/v1/play2worldPC.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
